# intrusion_detection

./: .gitignore  Dockerfile  Makefile  README.md  kernel_regression.ipynb  pyproject.toml  requirements.txt
transformer_ids/: kernel_regress.py  mlp.py  transformer.py
